--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav{
     padding-left: 7px
 }
 
-#fratName{
+.fratName{
     font-size: 90px;
     color: white;
     text-shadow: 5px 5px lightgreen;
@@ -119,4 +119,17 @@ nav{
     font-size: 25px;
     padding-bottom: 13px;
     text-shadow: 2px 2px lightgreen;
+}
+
+.bodyText{
+    margin-left: 45px;
+}
+
+.aboutUsText{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.centeredText{
+    text-align: center;
 }
