--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
     background-color: lightskyblue;
     color: white;
     cursor: pointer;
-    padding-left: 10px;
+    padding-left: 15px;
+    padding-right: 10px;
 }
 
 .middleButton{
@@ -25,6 +26,8 @@ body {
     background-color: lightskyblue;
     color: white;
     cursor: pointer;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .rightButton{
@@ -35,9 +38,10 @@ body {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 30px;
     background-color: lightskyblue;
+    padding-left: 10px;
+    padding-right: 15px;
     color: white;
     cursor: pointer;
-    padding-right: 10px;
 }
 
 .leftButton:hover {
@@ -132,4 +136,10 @@ nav{
 
 .centeredText{
     text-align: center;
+}
+
+iframe{
+    margin-left: 45px;
+    align-items: center;
+    border-width: 0 0 0 0;
 }
