--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ nav{
     border: 3px ;
     background-color: lightskyblue;
     border-radius: 10px;
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
     padding-left: 7px;
 }
 
@@ -78,7 +80,9 @@ nav{
     background-color: lightgreen;
     color: white;
     margin-left: 30px;
-    padding-left: 7px
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
+    padding-left: 7px;
 }
 
 .fratName{
