--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ iframe{
     border: 2px solid blue;
     color: white;
     border-radius: 20px;
-    margin: 0 2px 0 2px;
+    margin: 0 0 0 2px;
 }
 
 .ktpWebsiteButton:hover{
