--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
 }
 
 .fratName{
-    font-size: 90px;
+    font-size: 85px;
     color: white;
     text-shadow: 5px 5px lightgreen;
 }
@@ -131,6 +131,7 @@ body {
 
 .bodyText{
     margin-left: 45px;
+    margin-right: 5px;
 }
 
 .aboutUsText{
@@ -158,7 +159,7 @@ iframe{
     border-radius: 10px;
     background-color: lightskyblue;
     padding: 2px 4px 2px 4px;
-    font-size: 13px;
+    font-size: 11px;
 }
 
 .ktpWebsiteButton{
@@ -166,6 +167,7 @@ iframe{
     border: 2px solid blue;
     color: white;
     border-radius: 20px;
+    cursor: pointer;
     margin: 0 0 0 2px;
 }
 
@@ -178,10 +180,36 @@ iframe{
     text-align: center;
     display: flex;
     margin-right: 1.25%;
-    gap: 3px
+    gap: 3px;
 }
 
 .aboutUsInfo{
     flex: 1;
     align-items: center;
+}
+
+.downloadButton{
+    border: 2px solid blue;
+    background-color: lightskyblue;
+    border-radius: 4px;
+    color: white;
+}
+
+.downloadButton:hover{
+    background-color: lightgreen;
+    border-color:green;
+}
+
+#repositoryLink{
+    border: 2px solid blue;
+    border-radius: 10px;
+    background-color: lightskyblue;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+#repositoryLink:hover{
+    background-color: lightgreen;
+    border-color: green;
 }
