--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
 .aboutUs{
     border: 2px solid green ;
     border-radius: 15px;
-    padding:  0px 0px 0px 10px;
+    padding:  0px 0px 0px 1.25%;
     background-color: lightgreen;
     color: white;
 }
@@ -179,6 +179,7 @@ iframe{
 .aboutUsInfoContainer{
     text-align: center;
     display: flex;
+    margin-left: 0%;
     margin-right: 1.25%;
     gap: 3px;
 }
